# 3-python-package-kapow

./: .gitignore  Pipfile  README.md  example.py  pyproject.toml
.github/workflows/: build.yaml
src/pyanimalconverter/: __main__.py  conversation.py  convert.py  minmax.py
tests/: convInput.txt  test_compare.py  test_conversation.py  test_convert.py  test_max.py  test_min.py
